--- a/week5/InClass/ex1/client/src/VideoFooter.css
+++ b/week5/InClass/ex1/client/src/VideoFooter.css
@@ -1,27 +1,31 @@
-.videoFooter{
+.videoFooter {
     position: relative;
     color: white;
     bottom: 150px;
     margin-left: 40px;
     display: flex;
 }
-.videoFooter__text{
+
+.videoFooter__text {
     flex: 1;
 }
 
 .videoFooter__text>h3,
-.videoFooter__text>p{
+.videoFooter__text>p {
     padding-bottom: 20px;
 }
-.videoFooter__icon{
+
+.videoFooter__icon {
     position: absolute;
 }
-.videoFooter__ticker>.tiker{
+
+.videoFooter__ticker>ticker {
     height: fit-content;
     margin-left: 30px;
     width: 60%;
 }
-.videoFooter__Record{
+
+.videoFooter__record {
     animation: spinTheRecord infinite 5s linear;
     height: 50px;
     filter: invert(1);
