--- a/week5/InClass/ex1/client/src/VideoSidebar.css
+++ b/week5/InClass/ex1/client/src/VideoSidebar.css
@@ -4,7 +4,7 @@
     right: 10px;
     color: white;
 }
-.VideoSidebar__button{
+.videoSidebar__button{
     padding: 20px;
     text-align: center;
 }
