--- a/week5/InClass/ex1/client/src/video.css
+++ b/week5/InClass/ex1/client/src/video.css
@@ -5,7 +5,7 @@
     height: 100%;
     scroll-snap-align: start;
 }
-.video_player{
+.video__player{
     object-fit: fill;
     width: 100%;
     height: 100%;
