--- a/week5/InClass/ex2/client/src/components/Login.css
+++ b/week5/InClass/ex2/client/src/components/Login.css
@@ -6,23 +6,23 @@
     place-items: center;
 }
 
-.login__container{
+.login_container{
     padding: 100px;
     text-align: center;
     background-color: white;
     border-radius: 10px;
-    box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.12); 
 }
 
-.login__container >img{
+.login_container > img{
     object-fit: contain;
     height: 100px;
     margin-bottom: 40px;
 }
 
-.login__container > button{
-    margin-top: 50;
-    text-transform: inherit;
-    background-color: #0a8d48;
+.login_container > button{
+    margin-top: 50px;
+    text-transform: inherit !important;
+    background-color: #0a8d48 !important;
     color: white;
 }
